<resources>
    <string name="app_name">VanRoomies</string>

    <!-- Navigation and Fragments -->
    <string name="menu_listings">Listings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_chat">Chat</string>

    <!-- Matching Fragment -->
    <string name="matches_name_string">First Last</string>
    <string name="matches_age_string">23</string>
    <string name="matches_bio_string">Bio</string>
    <string name="matches_instruction_string">Swipe right to match, and left to reject</string>
    <string name="no_matches_found">Sorry, no matches found!</string>
    <string name="reshow_matches">Fetching you more matches!</string>

    <!-- Chat Channel Activity -->
    <string name="chat_send_button_text">Send</string>
    <string name="edit_chat_message_text">Enter Message</string>
    <string name="default_name">First Last</string>
    <string name="invalid_input_message">Please enter a non-empty message!</string>
    <string name="no_chats_found">Sorry, no chats found!</string>

    <!-- Chat Item -->
...
    <string name="sign_out">Sign Out</string>

    <!-- Listings Fragment -->
    <string name="listings_image_desc">The image for a given listing</string>
    <string name="listings_image">placeholder</string>
    <string name="listings_title">placeholder</string>
    <string name="listings_toggle">TOGGLE</string>
    <string name="listings_header_recommended">Recommended Listings</string>
    <string name="listings_header_owned">Owned Listings</string>

    <!-- View Listings Activity -->
    <string name="listings_desc">Listing Desc</string>
    <string name="listings_desc_text">This is the listing description.</string>
...
