...
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.886" />

    <Button
        android:id="@+id/edit_title"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:scaleX="1"
        android:scaleY="1"
        android:textColor="#D2E2E0"
        app:icon="@drawable/ic_edit"
        app:iconTint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/edit_housing_desc"
        app:layout_constraintEnd_toStartOf="@+id/listing_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_housing_type"
        app:layout_constraintVertical_bias="0.843" />

    <Button
        android:id="@+id/edit_housing_desc"
        android:layout_width="49dp"
        android:layout_height="33dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/edit_pet_friendly"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
...
