<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_chat_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_channel"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/Widget.AppCompat.Toolbar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            android:background="@color/grey">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/chat_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:civ_border_width="2dp"
                app:civ_border_color="#000000"
                app:civ_border_overlay= "false" />

            <TextView
                android:id="@+id/chat_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="35dp"
                android:text="@string/chat_row_name_text"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_chat_top"
        app:layout_constraintBottom_toTopOf="@+id/layout_chat_chatbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/chat_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_chat_chatbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/chat_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_chat_message"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/chat_send_button"
            android:background="@android:color/transparent"
            android:hint="@string/edit_chat_message_text"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackground"
            android:text="@string/chat_send_button_text"
            android:textColor="@color/black" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>